Fixed underline style for fancy headers on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -228,10 +228,7 @@ footer {
 
 @media (max-width: 360px) {
     .fancy span {
-        border-bottom-color: black;
-        border-bottom-width: 4px;
-        border-bottom-style: solid;
-        padding-bottom: 6px;
+        text-decoration: underline;
     }
     .fancy span:before,
     .fancy span:after {
